@@ -105,6 +105,11 @@ int main(void)
 				USB_HostState = HOST_STATE_Configured;
 				break;
 			case HOST_STATE_Configured:
+				if (HID_Host_ReportReceived(&Mouse_HID_Interface))
+				{
+					
+				}
+			
 				break;
 		}
 	
